--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-title: MR pulse sequence programming in Matlab
+title: TOPPE: a framework for rapid prototyping of MR pulse sequences
