modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-title: TOPPE: a framework for rapid prototyping of MR pulse sequences
+title: A framework for rapid prototyping of MR pulse sequences
