--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-title: A framework for rapid prototyping of MR pulse sequences
+title: Rapid prototyping of MR pulse sequences 
